# Sorting_Algorithm_Visualizer

./: .gitignore  README.md
cpp-core/: CMakeLists.txt  main.cpp
cpp-core/algorithms/: SortEngine.cpp  bubble.cpp  bucket.cpp  heap.cpp  insertion.cpp  merge.cpp  quick.cpp  radix.cpp  selection.cpp  shell.cpp
cpp-core/include/: SortEngine.hpp  Step.hpp  StepRecorder.hpp
cpp-core/step_recorder/: StepRecorder.cpp
cpp-core/tools/: log_generator.py
deliverables/: DemoAndNotes.md  Glossary.html  PresentationSlides.md  Project Report.html  Technical Documentation.html  TechnicalDocs.md  TechnicalDocumentation.md  UserManual.md  VSCode_Guide.md
frontend/: index.html  package-lock.json  package.json
frontend/public/presentation_logs/: 1_bubble.json  2_selection.json  3_insertion.json  4_merge.json  5_quick.json  6_radix.json  7_shell.json  8_bucket.json  9_heap.json
frontend/public/sample_logs/: bubble_10.json  merge_25.json  quick_20.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ControlPanel.tsx  VisualizerCanvas.tsx
frontend/src/utils/: StepParser.ts
